while/tests/invalid-parsing/Parsing_Invalid_12.while
int f(int x) {
    switch(x) {
     case 1:
      return 0;
     case 1:
      return 1;
    }
}